[gd_scene load_steps=2 format=2]

[ext_resource path="res://BigScript.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05261
margin_right = 1.05261
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 1.05261
margin_right = 265.0
margin_bottom = 601.053

[node name="Button1" type="Button" parent="VBoxContainer"]
margin_right = 265.0
margin_bottom = 20.0
text = "Bean"

[node name="Label1" type="Label" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 265.0
margin_bottom = 38.0

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 265.0
margin_bottom = 62.0
text = "Bean Farm"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 265.0
margin_bottom = 80.0

[node name="Timer1" type="Timer" parent="VBoxContainer"]
[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_buy_bean_farmer_button_pressed"]
[connection signal="timeout" from="VBoxContainer/Timer1" to="." method="_on_bean_farmer_timer_timeout"]
